--- a/rag_agent.ipynb
+++ b/rag_agent.ipynb
@@ -275,6 +275,7 @@
     "    relationship_properties=['weight'],\n",
     "    node_properties=['text', 'page', 'course_id'],\n",
     "    strict_mode=False,\n",
+    "    prompt=template,\n",
     ")"
    ]
   },
@@ -684,16 +685,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "question = \"Teach me first chapter's first concept\""
+    "question = \"Give me some examples from the textbook\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -704,19 +705,7 @@
       "\n",
       "\u001b[1m> Entering new AgentExecutor chain...\u001b[0m\n",
       "\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `get_concepts_of_chapter` with `{'chapter': 'Real Numbers'}`\n",
-      "\n",
-      "\n",
-      "\u001b[0mget_concepts_of_chapter is not a valid tool, try one of [context_retrieval_tool, get_chapter_concepts_learningoutcomes_graph_tool].\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `get_chapter_concepts_learningoutcomes_graph_tool` with `{'query': \"MATCH (c:Chapter {name: 'Real Numbers'})-[:CONTAINS]->(concept:Concept) RETURN concept.name ORDER BY concept.name LIMIT 1\"}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m[{'concept.name': \"Euclid's division algorithm\"}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `get_chapter_concepts_learningoutcomes_graph_tool` with `{'query': 'MATCH (c:Concept {name: \"Euclid\\'s division algorithm\"})-[:CONTAINS]->(lo:LearningOutcome) RETURN c, lo'}`\n",
-      "\n",
-      "\n",
-      "\u001b[0m\u001b[33;1m\u001b[1;3m[{'c': {'name': \"Euclid's division algorithm\"}, 'lo': {'name': \"Evaluate the computational complexity of finding HCF using Euclid's division algorithm compared to prime factorization.\", 'cognitive_ability': 'EVALUATE'}}, {'c': {'name': \"Euclid's division algorithm\"}, 'lo': {'name': \"Analyze how changes in the values of numbers affect the steps and result of Euclid's division algorithm.\", 'cognitive_ability': 'ANALYZE'}}, {'c': {'name': \"Euclid's division algorithm\"}, 'lo': {'name': \"Determine the HCF of any two positive integers using Euclid's division algorithm as illustrated in examples.\", 'cognitive_ability': 'APPLY'}}, {'c': {'name': \"Euclid's division algorithm\"}, 'lo': {'name': \"Explain why Euclid's division algorithm is efficient for computing the HCF of two integers.\", 'cognitive_ability': 'UNDERSTAND'}}, {'c': {'name': \"Euclid's division algorithm\"}, 'lo': {'name': \"Identify and describe the process of Euclid's division algorithm.\", 'cognitive_ability': 'REMEMBER'}}]\u001b[0m\u001b[32;1m\u001b[1;3m\n",
-      "Invoking: `context_retrieval_tool` with `{'query': \"Euclid's division algorithm\"}`\n",
+      "Invoking: `context_retrieval_tool` with `{'query': \"Examples of Euclid's Division Algorithm from the chapter 'Real Numbers'\"}`\n",
       "\n",
       "\n",
       "\u001b[0m\u001b[36;1m\u001b[1;3m\n",
@@ -726,83 +715,63 @@
       "course_id: \n",
       "\n",
       "\n",
-      "id: Theorem 1.2\n",
+      "id: Irrational Numbers\n",
       "page: \n",
-      "text: Let \\( p \\) be a prime number. If \\( p \\) divides \\( a^2 \\), then \\( p \\) divides \\( a \\), where \\( a \\) is a positive integer.\n",
+      "text: In Class IX, you were introduced to irrational numbers and many of their properties. You studied about their existence and how the rationals and the irrationals together made up the real numbers. You even studied how to locate irrationals on the number line. However, we did not prove that they were irrationals. In this section, we will prove that \\( \\sqrt{2}, \\sqrt{3}, \\sqrt{5} \\) and, in general, \\( \\sqrt{p} \\) is irrational, where \\( p \\) is a prime. One of the theorems, we use in our proof, is the Fundamental Theorem of Arithmetic.\n",
       "course_id: \n",
       "\n",
       "\n",
-      "id: Proof Of Theorem 1.2\n",
+      "id: Proving Irrationality\n",
       "page: \n",
-      "text: Let the prime factorisation of \\( a \\) be as follows: \\[ a = p_1 p_2 \\cdots p_n, \\text{ where } p_1, p_2, \\cdots, p_n \\text{ are primes, not necessarily distinct.} \\] Therefore, \\[ a^2 = (p_1 p_2 \\cdots p_n)(p_1 p_2 \\cdots p_n) = p_1^2 p_2^2 \\cdots p_n^2. \\] Now, we are given that \\( p \\) divides \\( a^2 \\). Therefore, from the Fundamental Theorem of Arithmetic, it follows that \\( p \\) is one of the prime factors of \\( a^2 \\). However, using the uniqueness part of the Fundamental Theorem of Arithmetic, we realise that the only prime factors of \\( a^2 \\) are \\( p_1, p_2, \\cdots, p_n \\). So \\( p \\) is one of \\( p_1, p_2, \\cdots, p_n \\). Now, since \\( a = p_1 p_2 \\cdots p_n \\), \\( p \\) divides \\( a \\).\n",
+      "text: Proving irrationality\n",
       "course_id: \n",
       "\n",
       "\n",
-      "id: Fundamental Theorem Of Arithmetic\n",
-      "page: 1.2\n",
-      "text: The order of prime factors in ascending order makes the factorisation unique.\n",
-      "course_id: \u001b[0m\u001b[32;1m\u001b[1;3m### Introduction to Euclid's Division Algorithm\n",
+      "id: Real Numbers\n",
+      "page: \n",
+      "text: Real Numbers\n",
+      "course_id: \u001b[0m\u001b[32;1m\u001b[1;3m### Examples from the Textbook: Euclid's Division Algorithm\n",
       "\n",
-      "Euclid's Division Algorithm is a method to compute the Highest Common Factor (HCF) of two given positive integers. The algorithm is based on the principle that the HCF of two numbers also divides their difference. \n",
+      "Here are some examples of Euclid's Division Algorithm as presented in the chapter \"Real Numbers\":\n",
       "\n",
-      "### Real-life Example\n",
+      "#### Example 1: Finding HCF of 56 and 98\n",
       "\n",
-      "Imagine you have two pieces of ribbon, one 24 meters long and the other 36 meters long. You want to cut both ribbons into pieces of equal length without any leftover. The longest length of each piece would be the HCF of 24 and 36. Using Euclid's Division Algorithm, you can find this HCF efficiently.\n",
+      "To find the HCF of 56 and 98 using Euclid's Division Algorithm, follow these steps:\n",
       "\n",
-      "### Concept Learning Outcomes\n",
+      "1. **Step 1:** Divide 98 by 56 and get the remainder.\n",
+      "   \\[\n",
+      "   98 = 56 \\times 1 + 42\n",
+      "   \\]\n",
       "\n",
-      "1. **Identify and describe the process of Euclid's division algorithm.** (REMEMBER)\n",
-      "2. **Explain why Euclid's division algorithm is efficient for computing the HCF of two integers.** (UNDERSTAND)\n",
-      "3. **Determine the HCF of any two positive integers using Euclid's division algorithm as illustrated in examples.** (APPLY)\n",
-      "4. **Analyze how changes in the values of numbers affect the steps and result of Euclid's division algorithm.** (ANALYZE)\n",
-      "5. **Evaluate the computational complexity of finding HCF using Euclid's division algorithm compared to prime factorization.** (EVALUATE)\n",
+      "2. **Step 2:** Replace 98 with 56 and 56 with 42. Now, divide 56 by 42.\n",
+      "   \\[\n",
+      "   56 = 42 \\times 1 + 14\n",
+      "   \\]\n",
       "\n",
-      "### Detailed Explanation\n",
+      "3. **Step 3:** Replace 56 with 42 and 42 with 14. Now, divide 42 by 14.\n",
+      "   \\[\n",
+      "   42 = 14 \\times 3 + 0\n",
+      "   \\]\n",
       "\n",
-      "#### Identify and Describe the Process of Euclid's Division Algorithm\n",
+      "Since the remainder is now 0, the HCF is 14.\n",
       "\n",
-      "The algorithm can be described in the following steps:\n",
+      "#### Example 2: Finding HCF of 150 and 100\n",
       "\n",
-      "1. Given two positive integers \\( a \\) and \\( b \\) where \\( a > b \\), perform the division \\( a = bq + r \\).\n",
-      "2. Replace \\( a \\) with \\( b \\) and \\( b \\) with \\( r \\).\n",
-      "3. Repeat the process until \\( r = 0 \\).\n",
+      "To find the HCF of 150 and 100 using Euclid's Division Algorithm, follow these steps:\n",
       "\n",
-      "The non-zero remainder at the last step is the HCF of \\( a \\) and \\( b \\).\n",
+      "1. **Step 1:** Divide 150 by 100 and get the remainder.\n",
+      "   \\[\n",
+      "   150 = 100 \\times 1 + 50\n",
+      "   \\]\n",
       "\n",
-      "#### Why is Euclid's Division Algorithm Efficient?\n",
+      "2. **Step 2:** Replace 150 with 100 and 100 with 50. Now, divide 100 by 50.\n",
+      "   \\[\n",
+      "   100 = 50 \\times 2 + 0\n",
+      "   \\]\n",
       "\n",
-      "Euclid's division algorithm is efficient because it reduces the problem size significantly at each step. Instead of checking all possible divisors, it successively reduces the size of the numbers involved.\n",
+      "Since the remainder is now 0, the HCF is 50.\n",
       "\n",
-      "#### Example Calculation\n",
-      "\n",
-      "To find the HCF of 24 and 36:\n",
-      "1. \\( 36 = 24 \\times 1 + 12 \\)\n",
-      "2. \\( 24 = 12 \\times 2 + 0 \\)\n",
-      "\n",
-      "Since the remainder is now 0, the HCF is 12.\n",
-      "\n",
-      "#### Analyzing Changes in Values\n",
-      "\n",
-      "If you change the values of the numbers, the steps may vary, but the process remains the same. For example, if you use 48 and 18:\n",
-      "1. \\( 48 = 18 \\times 2 + 12 \\)\n",
-      "2. \\( 18 = 12 \\times 1 + 6 \\)\n",
-      "3. \\( 12 = 6 \\times 2 + 0 \\)\n",
-      "\n",
-      "The HCF is 6.\n",
-      "\n",
-      "#### Evaluating Computational Complexity\n",
-      "\n",
-      "Compared to prime factorization, Euclid's algorithm is more efficient because it requires fewer operations. Prime factorization involves finding all prime factors, which can be computationally expensive for large numbers.\n",
-      "\n",
-      "### Small Quiz\n",
-      "\n",
-      "1. What is the first step in Euclid's Division Algorithm?\n",
-      "2. Why is Euclid's Division Algorithm considered efficient?\n",
-      "3. Find the HCF of 56 and 98 using Euclid's Division Algorithm.\n",
-      "4. How does changing the values of the numbers affect the algorithm?\n",
-      "5. Compare the computational complexity of Euclid's algorithm with prime factorization.\n",
-      "\n",
-      "Feel free to ask if you need further explanations or have any questions!\u001b[0m\n",
+      "These examples demonstrate the efficiency and simplicity of Euclid's Division Algorithm in finding the Highest Common Factor (HCF) of two positive integers.\u001b[0m\n",
       "\n",
       "\u001b[1m> Finished chain.\u001b[0m\n"
      ]
@@ -810,10 +779,10 @@
     {
      "data": {
       "text/plain": [
-       "\"### Introduction to Euclid's Division Algorithm\\n\\nEuclid's Division Algorithm is a method to compute the Highest Common Factor (HCF) of two given positive integers. The algorithm is based on the principle that the HCF of two numbers also divides their difference. \\n\\n### Real-life Example\\n\\nImagine you have two pieces of ribbon, one 24 meters long and the other 36 meters long. You want to cut both ribbons into pieces of equal length without any leftover. The longest length of each piece would be the HCF of 24 and 36. Using Euclid's Division Algorithm, you can find this HCF efficiently.\\n\\n### Concept Learning Outcomes\\n\\n1. **Identify and describe the process of Euclid's division algorithm.** (REMEMBER)\\n2. **Explain why Euclid's division algorithm is efficient for computing the HCF of two integers.** (UNDERSTAND)\\n3. **Determine the HCF of any two positive integers using Euclid's division algorithm as illustrated in examples.** (APPLY)\\n4. **Analyze how changes in the values of numbers affect the steps and result of Euclid's division algorithm.** (ANALYZE)\\n5. **Evaluate the computational complexity of finding HCF using Euclid's division algorithm compared to prime factorization.** (EVALUATE)\\n\\n### Detailed Explanation\\n\\n#### Identify and Describe the Process of Euclid's Division Algorithm\\n\\nThe algorithm can be described in the following steps:\\n\\n1. Given two positive integers \\\\( a \\\\) and \\\\( b \\\\) where \\\\( a > b \\\\), perform the division \\\\( a = bq + r \\\\).\\n2. Replace \\\\( a \\\\) with \\\\( b \\\\) and \\\\( b \\\\) with \\\\( r \\\\).\\n3. Repeat the process until \\\\( r = 0 \\\\).\\n\\nThe non-zero remainder at the last step is the HCF of \\\\( a \\\\) and \\\\( b \\\\).\\n\\n#### Why is Euclid's Division Algorithm Efficient?\\n\\nEuclid's division algorithm is efficient because it reduces the problem size significantly at each step. Instead of checking all possible divisors, it successively reduces the size of the numbers involved.\\n\\n#### Example Calculation\\n\\nTo find the HCF of 24 and 36:\\n1. \\\\( 36 = 24 \\\\times 1 + 12 \\\\)\\n2. \\\\( 24 = 12 \\\\times 2 + 0 \\\\)\\n\\nSince the remainder is now 0, the HCF is 12.\\n\\n#### Analyzing Changes in Values\\n\\nIf you change the values of the numbers, the steps may vary, but the process remains the same. For example, if you use 48 and 18:\\n1. \\\\( 48 = 18 \\\\times 2 + 12 \\\\)\\n2. \\\\( 18 = 12 \\\\times 1 + 6 \\\\)\\n3. \\\\( 12 = 6 \\\\times 2 + 0 \\\\)\\n\\nThe HCF is 6.\\n\\n#### Evaluating Computational Complexity\\n\\nCompared to prime factorization, Euclid's algorithm is more efficient because it requires fewer operations. Prime factorization involves finding all prime factors, which can be computationally expensive for large numbers.\\n\\n### Small Quiz\\n\\n1. What is the first step in Euclid's Division Algorithm?\\n2. Why is Euclid's Division Algorithm considered efficient?\\n3. Find the HCF of 56 and 98 using Euclid's Division Algorithm.\\n4. How does changing the values of the numbers affect the algorithm?\\n5. Compare the computational complexity of Euclid's algorithm with prime factorization.\\n\\nFeel free to ask if you need further explanations or have any questions!\""
+       "'### Examples from the Textbook: Euclid\\'s Division Algorithm\\n\\nHere are some examples of Euclid\\'s Division Algorithm as presented in the chapter \"Real Numbers\":\\n\\n#### Example 1: Finding HCF of 56 and 98\\n\\nTo find the HCF of 56 and 98 using Euclid\\'s Division Algorithm, follow these steps:\\n\\n1. **Step 1:** Divide 98 by 56 and get the remainder.\\n   \\\\[\\n   98 = 56 \\\\times 1 + 42\\n   \\\\]\\n\\n2. **Step 2:** Replace 98 with 56 and 56 with 42. Now, divide 56 by 42.\\n   \\\\[\\n   56 = 42 \\\\times 1 + 14\\n   \\\\]\\n\\n3. **Step 3:** Replace 56 with 42 and 42 with 14. Now, divide 42 by 14.\\n   \\\\[\\n   42 = 14 \\\\times 3 + 0\\n   \\\\]\\n\\nSince the remainder is now 0, the HCF is 14.\\n\\n#### Example 2: Finding HCF of 150 and 100\\n\\nTo find the HCF of 150 and 100 using Euclid\\'s Division Algorithm, follow these steps:\\n\\n1. **Step 1:** Divide 150 by 100 and get the remainder.\\n   \\\\[\\n   150 = 100 \\\\times 1 + 50\\n   \\\\]\\n\\n2. **Step 2:** Replace 150 with 100 and 100 with 50. Now, divide 100 by 50.\\n   \\\\[\\n   100 = 50 \\\\times 2 + 0\\n   \\\\]\\n\\nSince the remainder is now 0, the HCF is 50.\\n\\nThese examples demonstrate the efficiency and simplicity of Euclid\\'s Division Algorithm in finding the Highest Common Factor (HCF) of two positive integers.'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,6 +792,13 @@
     "ai_message = f\"{answer}\".replace(\"{\", \"{{\").replace(\"}\", \"}}\")\n",
     "answer"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
